--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn
-python-multipart
-opencv-python
-pandas
-numpy
-ultralytics
+fastapi==0.109.0
+uvicorn==0.24.0
+python-multipart==0.0.6
+opencv-python==4.8.1.78
+pandas==2.1.1
+numpy==1.26.2
+ultralytics==8.1.44
 tensorflow==2.16.1
 scikit-learn==1.3.2
