--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.109.0
 uvicorn==0.24.0
 python-multipart==0.0.6
-opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 pandas==2.1.1
 numpy==1.26.2
 ultralytics==8.1.44
